--- a/style.css
+++ b/style.css
@@ -31,3 +31,42 @@ h1 {
   width: 300px;
   height: 200px;
 }
+
+.flexpart {
+  max-width: 1300px;
+  width: 80%;
+  height: auto;
+  margin: 20px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.flexpart h2 {
+  text-align: center;
+  margin-top: 5%;
+  color: #fff;
+}
+
+.flexpart .top {
+  width: 100%;
+  height: 100px;
+  background: blue;
+}
+
+.flexpart .cardz {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  margin-top: 5%;
+  gap: 5%;
+}
+
+.flexpart .cardz .card {
+  margin: 5px 0;
+  width: 350px;
+  height: 200px;
+  background: rebeccapurple;
+}
